--- a/dbt_vr/dbt_project.yml
+++ b/dbt_vr/dbt_project.yml
@@ -38,4 +38,11 @@ models:
     bronze:
       +materialized: table
       +schema: bronze
+    silver:
+      +materialized: table
+      +schema: silver
+    gold:
+      +materialized: table
+      +schema: gold
+
     
